2006-12-28 Jim Garlick <garlick@llnl.gov>

	* getsize.c : Added getsize() implementation for hpux [Graham Smith].

2006-11-27 Jim Garlick <garlick@llnl.gov>

	* scrub.c : Refuse to scrub a zero length file (avoids
	assertion failure in progress.c) [Markus Schatz].

2006-11-22 Jim Garlick <garlick@llnl.gov>

	* scrub.c : Change sprintf's to snprintf [Markus Schatzl].

2006-10-18 Jim Garlick <garlick@llnl.gov>

	* : add __hpux to large file ifdef

	* getsize.c : use sscanf("%llu") instead of strtoull for hpux
	portability.

2006-08-17 Jim Garlick <garlick@llnl.gov>

	* getsize.c: Fixed logic error in main (only affects test prog).

2006-08-16 Jim Garlick <garlick@llnl.gov>

	* NEWS: Renamed README.

	* scrub.c: Added -S option to skip writing scrub signature.

	* : tag scrub-1.8

2006-08-07 Jim Garlick <garlick@llnl.gov>

	* getsize.c: Added str2int().

	* scrub.c: Call str2int() to parse blocksize arg.

2006-08-04 Jim Garlick <garlick@llnl.gov>

	* scrub.spec: Minor change to support building RPM's on AIX.

	* : make error reporting more verbose all around.

2006-08-03 Jim Garlick <garlick@llnl.gov>

	* Makefile: Add CC, CFLAGS, LDADD for AIX compilers.

	* sig.c: Fix typo.

	* pad.c, sig.c: Add large file includes.

2006-07-28 Jim Garlick <garlick@llnl.gov>

	* sig.[ch]: Read/write even blocksize multiples for AIX.

2006-07-23 Jim Garlick <garlick@llnl.gov>

	* scrub.c: Emit a warning if off_t is not 64 bits.

	* scrub.c, filldentry.[ch]: Use int instead of char for pattern
	  array elements, and encode VERIFY and RANDOM in high bits to 
	  allow for all possible byte values in a pattern, 

	* sig.[ch]: New.

	* scrub.c: Refuse to scrub a previously scrubbed file, unless 
	  the -f option is specified.

	* getsize.c: Clean up size2str(), silence compiler warnings.

	* scrub.c: Abort before progress bar display if no permission.

2006-07-17 Jim Garlick <garlick@llnl.gov>

	* fillfile.c: Only fsync() regular files.
